# de-case-study

./: .env.example  .gitignore  README.md  docker-compose.yml  justfile  main.py  pyproject.toml
.github/workflows/: ci.yml
apps/: __init__.py
apps/transactions/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
apps/transactions/management/commands/: seed_transactions.py
apps/transactions/migrations/: 0001_initial.py
apps/transactions/tests/: test_models.py  test_serializers.py  test_services.py  test_views.py
config/: settings.py  urls.py
